# legalese-to-simplese

./: .gitignore  README.md  demo.html  docker-compose.yaml  package-lock.json  package.json
backend/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
backend/DTO/: DTO.py
backend/clients/: aws_client.py  es_client.py  ollama.py
backend/docs/: logging.md
backend/prompts/: guardrail_prompts.py  system.py
backend/routers/: health.py  qa.py  upload.py
backend/services/: UploadService.py  custom_guardrail_service.py  elastic_search_service.py  health_service.py  llm_service.py  qa_service.py
backend/services/logging/: __init__.py  logging_service.py
backend/tests/: DocumentProcessing.py  QaServiceTesting.py
backend/utils/: __init__.py  helper.py  logger.py
frontend/: .env.example  README.md  index.html  package-lock.json
frontend/src/: index.css  main.jsx
frontend/src/components/CustomLoadingOverlay/: index.jsx
frontend/src/contexts/: AnalysisContext.jsx  AnalysisProvider.jsx
frontend/src/pages/Analysis/: index.css  index.jsx
frontend/src/pages/Home/: index.jsx
frontend/src/pages/Upload/: index.css  index.jsx
legalese-to-simplese-main/: docker-compose.yaml
public/: index.html
src/: App.css  App.js  index.css
src/components/: CTA.js  DocumentUpload.js  Features.js  Footer.js  Header.js  Hero.js  HowItWorks.js
