[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3==1.35.36",
    "botocore==1.35.36",
    "elasticsearch",
    "fastapi",
    "httpx==0.27.0",
    "langchain-community>=0.3.29",
    "langchain-elasticsearch>=0.3.2",
    "langchain-ollama>=0.3.8",
    "langchain[all]>=0.3.27",
    "pillow>=10.0.0",
    "pymupdf>=1.24.0",
    "pytest==8.2.2",
    "python-dotenv==1.0.1",
    "python-multipart",
    "uvicorn[standard]",
]
